<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logText"
        android:layout_width="194dp"
        android:layout_height="272dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fadeScrollbars="false"
        android:hint="@string/hint_logView"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextAddToLog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddToLog"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextAddToLog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_NewButtonValue" />

    <Button
        android:id="@+id/addToLogButton"
        android:layout_width="117dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="ButtonAddToLog"
        android:text="@string/button_addToLog"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextAddToLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextAddToLog" />

    <Button
        android:id="@+id/button2"
        android:layout_width="138dp"
        android:layout_height="67dp"
        android:onClick="deleteLastLog"
        android:text="@string/button_removeFromLog"
        app:layout_constraintBottom_toBottomOf="@+id/logText"
        app:layout_constraintEnd_toEndOf="@+id/addToLogButton"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="@+id/addToLogButton"
        app:layout_constraintTop_toTopOf="@+id/logText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextNewButtonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/editText_NewButtonName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_AddNewButton"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="AddNewButton"
        android:text="@string/btn_AddNewButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toEndOf="@+id/editTextNewButtonName"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LinearLayout_AddedButtons"
        android:layout_width="164dp"
        android:layout_height="260dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/logText"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0"></LinearLayout>

    <EditText
        android:id="@+id/editText_NewButtonValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/editText_NewButtonValue"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextNewButtonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewButtonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="122dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:onClick="RemoveLastButton"
        android:text="@string/button_RemoveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_AddNewButton"
        app:layout_constraintTop_toBottomOf="@+id/btn_AddNewButton" />

</androidx.constraintlayout.widget.ConstraintLayout>